--- a/config/a.config
+++ b/config/a.config
@@ -1,8 +1,8 @@
 [{kernel,
-  [{distributed, 
+  [{distributed,
     [{chucky,
       5000,
-      [a@manticore, {b@manticore, c@manticore}]}]},
-   {sync_nodes_mandatory, [b@manticore, c@manticore]},
+      [a@pentium, {b@pentium, c@pentium}]}]},
+   {sync_nodes_mandatory, [b@pentium, c@pentium]},
    {sync_nodes_timeout, 30000}
   ]}].
