--- a/config/c.config
+++ b/config/c.config
@@ -1,8 +1,8 @@
-[{kernel, 
-  [{distributed, 
+[{kernel,
+  [{distributed,
     [{chucky,
       5000,
-      [a@manticore, {b@manticore, c@manticore}]}]},
-   {sync_nodes_mandatory, [a@manticore, b@manticore]},
-   {sync_nodes_timeout, 30000} 
+      [a@pentium, {b@pentium, c@pentium}]}]},
+   {sync_nodes_mandatory, [a@pentium, b@pentium]},
+   {sync_nodes_timeout, 30000}
   ]}].
